# motorbridge

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md
.github/: pull_request_template.md
bindings/python/: DAMIAO_API.md  DAMIAO_API.zh-CN.md  DAMIAO_PYTHON_REFERENCE.zh-CN.md  DAMIAO_binding.md  README.md  README.zh-CN.md  pyproject.toml  robostride_binding.md  setup.py
bindings/python/examples/: README.md  README.zh-CN.md  READMEzh_cn.md  damiao_dm_serial_demo.py  damiao_maintenance_demo.py  damiao_register_rw_demo.py  dm_pcan_tele.py  dm_serial_01_calibration_demo.py  dm_serial_02_control_modes_demo.py  dm_serial_03_status_demo.py  dm_serial_04_enable_setzero_no_delay_demo.py  dm_serial_05_setzero_timing_ab_test.py  dm_serial_06_recover_no_reboot_demo.py  dm_serial_07_enable_setzero_enable_rotate_demo.py  dm_serial_08_negative_enable_setzero_guard_demo.py  dm_serial_leader_monitor_demo.py  dm_serial_mode_switch_200_demo.py  dm_serial_query_ber_demo.py  dm_serial_status_like_cli_demo.py  dm_serial_tele_multi.py  dm_serial_tele_single.py  full_modes_demo.py  hexfellow_canfd_demo.py  mit_pos_switch_demo.py  multi_motor_ctrl_demo.py  pid_register_tune_demo.py  pos_ctrl_demo.py  pos_repl_demo.py  python_wrapper_demo.py  quad_vendor_binding_ws_demo.html  quad_vendor_binding_ws_demo.py  quad_vendor_pos_binding_demo.py  robstride_wrapper_demo.py  scan_ids_demo.py  simple_01_motor_control.py  simple_02_quad_motor_control.py
bindings/python/get_started/: README.md  README.zh-CN.md  quickstart_01_scan.py  quickstart_02_single_motor.py  quickstart_03_quad_vendor.py
bindings/python/get_started/courses/: 00-enable-and-status.md  00-enable-and-status.py  01-scan.md  01-scan.py  02-register-rw.md  02-register-rw.py  03-mode-switch-method.md  03-mode-switch-method.py  04-mode-mit.md  04-mode-mit.py  05-mode-pos-vel.md  05-mode-pos-vel.py  06-mode-vel.md  06-mode-vel.py  07-mode-force-pos.md  07-mode-force-pos.py  08-mode-mixed-switch.md  08-mode-mixed-switch.py  09-multi-motor.md  09-multi-motor.py  README.zh-CN.md
bindings/python/mintlify/: docs.json  index.mdx  install.mdx  quickstart.mdx  transports.mdx  what-is-motorbridge.mdx
bindings/python/mintlify/api/: cli.mdx  controller.mdx  mode-and-state.mdx  motor.mdx
bindings/python/mintlify/best-practices/: control-loop-patterns.mdx  release-and-versioning.mdx  troubleshooting.mdx
bindings/python/mintlify/reference/: can-id-and-model-cheatsheet.mdx  vendor-capability-matrix.mdx
bindings/python/mintlify/tutorials/: 01-scan-and-identify.mdx  03-mode-switch-and-control.mdx  04-multi-motor.mdx  05-register-and-params.mdx  06-practical-recipes.mdx  07-complete-binding-interface-guide.mdx
bindings/python/mintlify/zh/: index.mdx  quickstart.mdx  setup.mdx  transports.mdx  what-is-motorbridge.mdx
bindings/python/mintlify/zh/api/: cli.mdx  controller.mdx  mode-and-state.mdx  motor.mdx
bindings/python/src/motorbridge/: __init__.py  abi.py  cli.py  core.py  damiao_registers.py  errors.py  gateway.py  platform_hints.py
bindings/python/src/motorbridge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
bindings/python/tests/: test_import.py
integrations/ws_gateway/: Cargo.toml  README.md  README.zh-CN.md
integrations/ws_gateway/src/: hightorque.rs  main.rs  model.rs  ops.rs
integrations/ws_gateway/src/commands/: args.rs  parse.rs  scan.rs  vendor_ops.rs
integrations/ws_gateway/src/ops/: hightorque_io.rs  mod.rs  robstride_params.rs  scan.rs  scan_damiao.rs  vendor_ops.rs
integrations/ws_gateway/src/router/: dispatch.rs  mod.rs
integrations/ws_gateway/src/session/: connect.rs  mod.rs  runtime.rs
integrations/ws_gateway/src/vendors/: damiao_ws.rs  hightorque_ws.rs  mod.rs  robstride_ws.rs  transport_ws.rs
integrations/ws_gateway/tools/: compare_cli_ws_scan.sh  ws_smoke_test.sh  ws_test_client.html
motor_abi/: Cargo.toml
motor_abi/include/: motor_abi.h
motor_abi/src/: controller_add_motor_ffi.rs  controller_lifecycle_ffi.rs  hightorque.rs  lib.rs  motor_control_ffi.rs  motor_lifecycle_ffi.rs  motor_register_ffi.rs  state_ffi.rs
motor_abi/src/param_ffi/: common.rs  mod.rs
motor_abi/src/param_ffi/damiao/: get_ffi.rs  write_ffi.rs
motor_abi/src/param_ffi/hexfellow/: get_ffi.rs  write_ffi.rs
motor_abi/src/param_ffi/hightorque/: get_ffi.rs  mod.rs  write_ffi.rs
motor_abi/src/param_ffi/myactuator/: get_ffi.rs  write_ffi.rs
motor_abi/src/param_ffi/robstride/: compat_ffi.rs  get_ffi.rs  mod.rs  write_ffi.rs
motor_abi/src/vendor_params/: damiao.rs  hexfellow.rs  hightorque.rs  mod.rs  myactuator.rs  robstride.rs
motor_cli/: Cargo.toml  DAMIAO_API.md  DAMIAO_API.zh-CN.md  MYACTUATOR_API.md  MYACTUATOR_API.zh-CN.md  README.md  README.zh-CN.md  ROBSTRIDE_API.md  ROBSTRIDE_API.zh-CN.md
motor_cli/src/: args.rs  damiao_cli.rs  hexfellow_cli.rs  hightorque_cli.rs  main.rs  myactuator_cli.rs  robstride_cli.rs
motor_core/: Cargo.toml
motor_core/src/: bus.rs  controller.rs  device.rs  dm_serial.rs  error.rs  lib.rs  model.rs  pcan.rs  socketcan.rs  socketcanfd.rs  test_support.rs  vendor_controller.rs
(+196 files in other folders)
