[workspace]
members = [
  "motor_core",
  "motor_vendors/damiao",
  "motor_vendors/template",
  "motor_cli",
  "motor_abi",
  "integrations/ws_gateway",
  "tools/motor_calib",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["tianrking"]
license = "MIT"
repository = "https://github.com/tianrking/motorbridge.git"
homepage = "https://github.com/tianrking/motorbridge"
description = "Unified CAN motor control stack with pluggable vendor drivers and C ABI"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
