[package]
name = "motor_abi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
motor_vendor_damiao = { path = "../motor_vendors/damiao" }
motor_vendor_robstride = { path = "../motor_vendors/robstride" }
