[package]
name = "motor_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "motor_cli"
path = "src/main.rs"

[dependencies]
motor_vendor_damiao = { path = "../motor_vendors/damiao" }
motor_vendor_robstride = { path = "../motor_vendors/robstride" }
