[package]
name = "motor_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "motor_core"
path = "src/lib.rs"

[target.'cfg(unix)'.dependencies]
serialport = "4.6"

[target.'cfg(target_os = "windows")'.dependencies]
libloading = "0.8"
