[package]
name = "motor_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "motor_core"
path = "src/lib.rs"

[dependencies]
serialport = { version = "4.6", default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
libloading = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
libloading = "0.8"
