[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "motorbridge"
version = "0.1.3"
description = "Python SDK for motorbridge Rust ABI"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "motorbridge contributors" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/tianrking/motorbridge"
Repository = "https://github.com/tianrking/motorbridge"

[project.scripts]
motorbridge-cli = "motorbridge.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
motorbridge = ["lib/*"]
