[package]
name = "ws_gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "ws_gateway"
path = "src/main.rs"

[dependencies]
motor_vendor_damiao = { path = "../../motor_vendors/damiao" }
motor_vendor_robstride = { path = "../../motor_vendors/robstride" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
